# swagger.json
@@ -9,12 +9,8 @@
       "url": "https://opensource.org/licenses/MIT"
     }
   },
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ],
+  "consumes": ["application/json"],
+  "produces": ["application/json"],
   "servers": [
     {
       "url": "https://kapusta-wtf.herokuapp.com/api/v1"
@@ -48,9 +44,7 @@
   "paths": {
     "/users/signup": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "User registration",
         "parameters": [],
         "requestBody": {
@@ -90,9 +84,7 @@
     },
     "/users/login": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "User authentication",
         "parameters": [],
         "requestBody": {
@@ -145,7 +137,7 @@
         "tags": ["Auth"],
         "summary": "User logout",
         "parameters": [],
-        "security": [{"Bearer": []}],
+        "security": [{ "Bearer": [] }],
         "requestBody": {},
         "responses": {
           "204": {
@@ -169,9 +161,7 @@
     },
     "/users/current": {
       "get": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "User current. Check the token in the request header!",
         "parameters": [],
         "security": [
@@ -205,9 +195,7 @@
     },
     "/users/verify/{verificationToken}": {
       "get": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "User email verify",
         "parameters": [
           {
@@ -244,9 +232,7 @@
     },
     "/users/verify": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "User email repeat verify",
         "parameters": [],
         "requestBody": {
@@ -296,9 +282,7 @@
     },
     "/users/google": {
       "get": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "Google authentication.",
         "parameters": [],
         "requestBody": {},
@@ -316,9 +300,7 @@
     },
     "/transactions": {
       "post": {
-        "tags": [
-          "Transactions"
-        ],
+        "tags": ["Transactions"],
         "summary": "Transaction creation",
         "parameters": [],
         "security": [
@@ -363,9 +345,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Transactions"
-        ],
+        "tags": ["Transactions"],
         "summary": "Transaction deletion",
         "parameters": [],
         "security": [
@@ -408,9 +388,7 @@
     },
     "/balance": {
       "post": {
-        "tags": [
-          "Balance"
-        ],
+        "tags": ["Balance"],
         "summary": "Balance creation",
         "parameters": [],
         "security": [
@@ -451,9 +429,7 @@
         }
       },
       "get": {
-        "tags": [
-          "Balance"
-        ],
+        "tags": ["Balance"],
         "summary": "Get balance",
         "parameters": [],
         "security": [
@@ -492,9 +468,7 @@
     },
     "/categories": {
       "get": {
-        "tags": [
-          "Category"
-        ],
+        "tags": ["Category"],
         "summary": "get all categories",
         "security": [
           {
@@ -518,9 +492,7 @@
     },
     "/report/short": {
       "get": {
-        "tags": [
-          "Report"
-        ],
+        "tags": ["Report"],
         "summary": "get expenses or income transactions for the last six months of the current year",
         "security": [
           {
@@ -567,9 +539,7 @@
     },
     "/report/short-per-month": {
       "get": {
-        "tags": [
-          "Report"
-        ],
+        "tags": ["Report"],
         "summary": "get expenses or income transactions for the selected month and year",
         "security": [
           {
@@ -616,9 +586,7 @@
     },
     "/report/category-per-month": {
       "get": {
-        "tags": [
-          "Report"
-        ],
+        "tags": ["Report"],
         "summary": "get expenses or income transactions by category in the selected month and year",
         "security": [
           {
@@ -672,9 +640,7 @@
     },
     "/report/by-name-per-month": {
       "get": {
-        "tags": [
-          "Report"
-        ],
+        "tags": ["Report"],
         "summary": "get statistics on the name of the transactions in the selected category for the selected month and year",
         "security": [
           {
@@ -728,9 +694,7 @@
     },
     "/report/all-in-day": {
       "get": {
-        "tags": [
-          "Report"
-        ],
+        "tags": ["Report"],
         "summary": "get  all transactions per day",
         "security": [
           {
@@ -780,10 +744,7 @@
     "schemas": {
       "RegisterRequest": {
         "type": "object",
-        "required": [
-          "email",
-          "password"
-        ],
+        "required": ["email", "password"],
         "properties": {
           "email": {
             "type": "string",
@@ -839,10 +800,7 @@
       },
       "LoginRequest": {
         "type": "object",
-        "required": [
-          "email",
-          "password"
-        ],
+        "required": ["email", "password"],
         "properties": {
           "email": {
             "type": "string",
@@ -1097,10 +1055,7 @@
           },
           "transactionType": {
             "type": "string",
-            "enum": [
-              "expenses",
-              "income"
-            ],
+            "enum": ["expenses", "income"],
             "description": "Transaction's type",
             "example": "expenses"
           },
@@ -1176,9 +1131,7 @@
       },
       "TransactionDeleteRequest": {
         "type": "object",
-        "required": [
-          "transactionId"
-        ],
+        "required": ["transactionId"],
         "properties": {
           "transactionId": {
             "type": "string",
@@ -1212,9 +1165,7 @@
       },
       "BalanceCreateRequest": {
         "type": "object",
-        "required": [
-          "currentBalance"
-        ],
+        "required": ["currentBalance"],
         "properties": {
           "currentBalance": {
             "type": "integer",
@@ -1249,9 +1200,7 @@
       },
       "GetBalanceRequest": {
         "type": "object",
-        "required": [
-          "_id"
-        ],
+        "required": ["_id"],
         "properties": {
           "_id": {
             "type": "string",
@@ -1502,13 +1451,13 @@
           }
         }
       }
-    }
-  },
-  "securitySchemes": {
-    "Bearer": {
-      "type": "http",
-       "scheme": "bearer",
-      "bearerFormat": "JWT"
+    },
+    "securitySchemes": {
+      "Bearer": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
     }
   }
 }
